@@ -1,3 +1,7 @@
+2006-12-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (External transfer methods): Describe new method `scpc'.
+
 2006-12-09  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Bug Reports): Add code to retrieve function call
